feat: add private exercise video covers
